forceMock/src/objects/SalesforceLitleMappingsObject_c__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>legalEntityNameDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>legalEntityNameDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityName__c</fullName>
        <description>Legal Entity Name</description>
        <label>legalEntityName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityType__c</fullName>
        <description>Legal Entity Type</description>
        <label>legalEntityType</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>SalesforceLitleMappingsObject__c</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesforceLitleMappingsObject__cs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>